fix: shareIcon alignment

--- a/src/features/user/ProfileV2/styles/MyForestMap.module.scss
+++ b/src/features/user/ProfileV2/styles/MyForestMap.module.scss
@@ -121,7 +121,7 @@
         width: 22px;
         border-radius: 50%;
         background-color: #FFFFFF;
-        padding-top: 3px;
+        padding-top: 2px;
         padding-left: 3px;
     }
     >.totalTreeCount {
